hphp/hack/test/typecheck/coeffects/write_props/index_op_error.php.exp
File "index_op_error.php", line 12, characters 3-26:
Writing to object properties requires the capability WriteProperty, which is not provided by the context (Parsing[1002])
File "index_op_error.php", line 12, characters 3-20:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "index_op_error.php", line 11, characters 31-32:
  The local (enclosing) context provides the capability set {}
